Use a fixed position blurred background image.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -27,6 +27,7 @@
 .site-nav {
 	float: right;
 	line-height: 56px;
+	z-index: 100;
 
 	.menu-icon {
 		display: none;
@@ -115,7 +116,7 @@
 
 .footer-col-wrapper {
 	font-size: 15px;
-	color: $grey-color;
+	color: $grey-color-dark;
 	margin-left: -$spacing-unit / 2;
 	@extend %clearfix;
 }
