--- a/css/main.scss
+++ b/css/main.scss
@@ -156,3 +156,35 @@ a.site-title:hover {
 .flex-9 {
 	flex: 75%;
 }
+
+.site-header {
+	border-top: none;
+}
+
+.site-header,
+.site-footer,
+.wrapper {
+	background-color: #fff;
+	box-shadow: #fff 0 0 64px;
+}
+
+.page-content {
+	// padding: 0;
+	position: relative;
+}
+
+.page-background-image {
+	position: fixed;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-image: url(/img/page-background.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.wrapper {
+	padding-top: 30px;
+}
